--- a/Codigo/pokemon.css
+++ b/Codigo/pokemon.css
@@ -20,15 +20,15 @@ height: 30px;
 }
 
 body {
-width: 99%;
-background-image: url('E:/M8UF5/Codigo/fotos/fondo.jpg');
+width: 100%;
+background-image: url('C:/Bemen3/Codigo/fotos/fondo.jpg');
 background-size: cover;
 background-repeat: no-repeat;
 background-attachment: fixed;
   font-family: "Montserrat", sans-serif;
   margin: 0;
   width: 100%;
-  height: 200vh;
+  height: 160vh;
   -webkit-animation: gradient 15s ease infinite;
   animation: gradient 15s ease infinite;
   display: flex;
@@ -40,9 +40,6 @@ background-attachment: fixed;
 
 .titulpoke {
 text-align: center;
-}
-
-.titulpoke {
 font-family:cursive;
 font-size:20px;
 color:white;
@@ -53,6 +50,7 @@ text-shadow: 2px  1px 1px black,
 }
 
 li {
+list-style-type:  none;
 margin-bottom: 1em;
 color:white;
 }
@@ -111,7 +109,7 @@ float: left;
 }
 
 .todos1 {  /* primero */ 
-background: url('E:/M8UF5/Codigo/fotos/rojo.jpg') no-repeat center center/cover;
+background: url('C:/Bemen3/Codigo/fotos/rojo.jpg') no-repeat center center/cover;
 border-radius: 280px/100px;
 border: 6px solid black;
 width: 80%;
@@ -120,7 +118,7 @@ text-align: center;
 } 
 
 .todos2 { /* segundo */
-background: url('E:/M8UF5/Codigo/fotos/azul.jpg') no-repeat center center/cover;
+background: url('C:/Bemen3/Codigo/fotos/azul.jpg') no-repeat center center/cover;
 border-radius: 280px/100px;
 border: 6px solid black;
 width: 80%;
@@ -129,7 +127,7 @@ text-align: center;
 } 
 
 .todos3 { /* trecero */
-background: url('E:/M8UF5/Codigo/fotos/amarillo.jpg') no-repeat center center/cover;
+background: url('C:/Bemen3/Codigo/fotos/amarillo.jpg') no-repeat center center/cover;
 border-radius: 280px/100px;
 border: 6px solid black;
 width: 80%;
@@ -137,11 +135,6 @@ height: 450px;
 float: left;
 text-align: center;
 } 
-
-.pino {
-width: 100%;
-float: left;
-}
 
 .s {
 width: 31%;
@@ -188,7 +181,7 @@ html {
   font-weight: bold;
   font-size: 24px;
   line-height: 32px;
-  color: #26384E;
+  color: #00FFFF ;
   transform: translateY(20px);
   transition: all 0.4s ease;
   transition-delay: 0.2s;
@@ -210,7 +203,7 @@ html {
 .slidep {
   font-size: 18px;
   line-height: 34px;
-  color: #889DB8;
+  color: #560319;
   transform: translateY(20px);
   transition: all 0.4s ease;
   transition-delay: 0.3s;
@@ -240,13 +233,13 @@ html {
 
 
 .swiper-container {
-  background: linear-gradient(270deg, #f7f9ff 0%, #f2f6ff 100%);
+  background: linear-gradient(270deg, #f7f9ff 0%, #E6E6FA 100%);
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   width: 100%;
   position: relative;
   max-width: 1150px;
   height: 100%;
-  max-height: 230px;
+  max-height: 350px;
   border-radius: 40px;
   top: 15%;
 }
@@ -261,8 +254,8 @@ html {
 }
 
 .slider-image-solo {
-  height:100px;
-  width: 100%;
+  height:100%;
+  width: 20%;
   text-align: left;
 }
 
@@ -275,7 +268,7 @@ html {
   flex-direction: column;
   flex-shrink: 0;
   opacity: 0;
-  background: linear-gradient(270deg, #f7f9ff 0%, #f2f6ff 100%);
+  background: linear-gradient(270deg, #ffff00 0%, #FF0000 100%);
   cursor: -webkit-grab;
   cursor: grab;
 }
@@ -300,25 +293,9 @@ html {
   transform: translateY(0px);
   opacity: 1;
 }
-.create-line-left {
-  padding-left: 15%;
-  position: relative;
-  display: inline-block;
-  transition: all 0.4s;
-}
-
-.create-line-left:before{ 
-  content: "";
-  background: #FF0000 ;
-  width: 300px;
-  height: 7px;
-  top: 20px;
-  position: absolute;
-  border-radius: 20px;
-}
 
 .slider-image {
-  width: 100%;
+  width: 20%;
   height: 100%;
   -o-object-fit: cover;
   object-fit: cover;
@@ -328,7 +305,7 @@ html {
 .swiper-pagination {
   position: absolute;
   left: 50%;
-  bottom: -50px;
+  bottom: -40px;
   transform: translatex(-50%);
   z-index: 1;
   width: auto !important;
@@ -358,10 +335,10 @@ html {
 .slider-buttons {
   position: absolute;
   display: flex;
-  top: 115%;
+  top: 110%;
   justify-content: flex-end;
-  width: 100%;
-  padding-top: 8px;
+  width: 95%;
+  height: 20%;
 }
 
 .swiper-button-next,
@@ -379,12 +356,11 @@ html {
 .swiper-button-prev:before {
   content: "";
   position: absolute;
-  background-color: #fff;
-  height: 1px;
-  width: 0;
-  left: 0;
+  background-color: black;
+  height: 2px;
   bottom: -1px;
   transition: 0.2s;
+  top: 40px;
 }
 
 .swiper-button-next:hover:before,
